# Algorithms

./: Makefile  README.md
autoit/: BubbleSort.au3  Factorial.au3  HeapSort.au3  InsertionSort.au3  MergeSort.au3  QuickSort.au3  SheakerSort.au3
c/: hashing.h
c/searching/: bm.h  duplicate_check.h  kmp.h  rk.h
c/sorting/: bubble_sort.h
cpp/: min_max.hpp  tmp_fibonacci.hpp
erlang/common/: fibonacci.erl
erlang/math/: factorial.erl
io/compression/: LZW.io
lua/: is_prime.lua
python/: README.md  __init__.py  pyproject.toml
python/capi/: bm.c  hashing.c  kmp.c  rk.c
python/compression/: __init__.py  lzw.py  rle.py
python/cryptography/: __init__.py  simple.py
python/graphs/: dijkstra.py  mst.py  searching.py  shortest_path.py  warshall.py
python/math/: __init__.py
python/maths/: __init__.py  functions.py  gauss.py  polynomials.py
python/sorting/: merge_sort.py
scala/math/: sum.scala
