# "I think, therefore I am."
# ~ René Descartes

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hero24.algorithms"
version = "1.0"
authors = [
  { name="hero24", email="hero24@interia.pl" },
]
description = "A set of various algorithms"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hero24/Algorithms/"
Issues = "https://github.com/hero24/Algorithms/issues/"


